RESOLVED FIXED27100
Media controls shouldn't display a "loading" state when there is no src.
https://bugs.webkit.org/show_bug.cgi?id=27100
Summary Media controls shouldn't display a "loading" state when there is no src.
Pierre d'Herbemont
Reported 2009-07-08 16:02:58 PDT
Media controls shouldn't display a "loading" state when there is no src. <rdar://problem/7042621>
Attachments
patch v1. (8.90 KB, patch)
2009-07-08 16:07 PDT, Pierre d'Herbemont
simon.fraser: review+
Pierre d'Herbemont
Comment 1 2009-07-08 16:07:16 PDT
Created attachment 32483 [details] patch v1.
Pierre d'Herbemont
Comment 2 2009-07-08 18:26:22 PDT
Note You need to log in before you can comment on or make changes to this bug.