WebCore:

2009-07-08  Pierre d'Herbemont  <pdherbemont@apple.com>

        Reviewed by Simon Fraser.

        https://bugs.webkit.org/show_bug.cgi?id=27100
        <rdar://problem/7042621>

        Don't display "loading" in the <video> controller when
        there is no src specified.

        * rendering/MediaControlElements.cpp:
        (WebCore::MediaControlStatusDisplayElement::update): The only
        way to find out if we have an element is currentSrc(). networkState()
        will always report LOADING according to the spec.

LayoutTests:

2009-07-08  Pierre d'Herbemont  <pdherbemont@apple.com>

        Reviewed by Simon Fraser.

        https://bugs.webkit.org/show_bug.cgi?id=27100

        Reenable media/video-empty-source.html. Test the controls
        look when there is no src specified in a <video> element.

        * platform/mac-leopard/media/video-empty-source-expected.checksum:
        * platform/mac-leopard/media/video-empty-source-expected.png:
        * platform/mac-leopard/media/video-empty-source-expected.txt: Copied from LayoutTests/platform/mac/media/video-empty-source-expected.txt.
        * platform/mac-snowleopard/Skipped:
        * platform/mac/media/video-empty-source-expected.checksum:
        * platform/mac/media/video-empty-source-expected.png:
        * platform/mac/media/video-empty-source-expected.txt:

Canonical link: https://commits.webkit.org/37310@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@45655 268f45cc-cd09-0410-ab3c-d52691b4dbfc